Reservation updated